# myjavaparser

./: .gitignore  README.md  dependency-reduced-pom.xml  pom.xml
myjavaparser/: dependency-reduced-pom.xml
myjavaparser/src/main/java/com/hdz/myjavaparser/: ClassFieldChangedInfo.java  (+7 more)
myvm/: .gitignore  CMakeLists.txt  MyVmConfig.h  MyVmConfig.h.in  main.cpp
myvm/classloader/: AccessFlag.cpp  AccessFlag.h  Annotation.cpp  Annotation.h  AttributeFactory.cpp  AttributeFactory.h  AttributeInfo.cpp  AttributeInfo.h  BootstrapClassLoader.cpp  BootstrapClassLoader.h  CMakeLists.txt  ClassFileInfo.cpp  ClassFileInfo.h  ClassInfo.cpp  ClassInfo.h  ClassLoader.cpp  ClassLoader.h  ClassParser.cpp  ClassParser.h  CodeAttr.cpp  CodeAttr.h  ConstantFactory.cpp  ConstantFactory.h  ConstantFieldRef.h  ConstantInfo.cpp  ConstantInfo.h  ConstantInterfaceMethodRef.h  ConstantMethodRef.h  FieldInfo.cpp  FieldInfo.h  FileReader.cpp  FileReader.h  Frame.cpp  Frame.h  Heap.cpp  Heap.h  JavaThread.h  LocalVariableTable.cpp  LocalVariableTable.h  Method.cpp  (+13 more)
myvm/common/: CMakeLists.txt  ClassFileReader.cpp  ClassFileReader.h  FileWriter.cpp  FileWriter.h  GlobalProperities.cpp  GlobalProperties.cpp  GlobalProperties.h  JarArchive.cpp  JarArchive.h  JarClassFileReader.cpp  JarClassFileReader.h  JarFileReader.cpp  JarFileReader.h  Logger.cpp  Logger.h  RegularFileReader.cpp  RegularFileReader.h  types.h  utils.h
myvm/instructions/: AddInstructions.cpp  AddInstructions.h  CMakeLists.txt  ConstantInstructions.cpp  ConstantInstructions.h  DupInstruction.cpp  DupInstruction.h  FieldInstructions.cpp  FieldInstructions.h  GetFieldInstruction.cpp  GetFieldInstruction.h  Instructions.cpp  Instructions.h  InvokeInstructions.cpp  InvokeInstructions.h  LoadInstructions.cpp  LoadInstructions.h  NewInstruction.cpp  NewInstruction.h  PopInstructions.cpp  PopInstructions.h  ReturnInstruction.cpp  ReturnInstruction.h  StaticInstructions.cpp  StaticInstructions.h  StoreInstructions.cpp  StoreInstructions.h  instructions.h
myvm/test/testmyvm/: pom.xml
myvm/test/testmyvm/src/main/java/com/myvm/test/: App.java  SimpleClass.java  Sum.java  SumTest.java  SystemTest.java
myvm/test/testmyvm/src/test/java/com/myvm/test/: AppTest.java
myvm/windows/: CMakelists.txt  Environment.cpp  Environment.h
src/main/java/com/hdz/myjavaparser/: App.java  JavaClassDiff.java  JavaDeclaredClass.java  JavaFileDiff.java  MarkdownBlock.java  MarkdownList.java  MarkdownTable.java  MarkdownUtils.java  PackageParser.java
(+1 files in other folders)
